// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > scenario create should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "bundleId": "1",
        "name": "test",
        "projectId": "1",
        "variants": Array [
          "Default",
        ],
      },
      "method": "post",
    },
    "url": "/api/scenario",
  },
  "type": "fetch",
}
`;

exports[`actions > scenario create should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "bundleId": "1",
          "name": "test",
          "projectId": "1",
          "variants": Array [
            "Default",
          ],
        },
        "method": "post",
      },
      "url": "/api/scenario",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > scenario create should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "bundleId": "1",
          "name": "test",
          "projectId": "1",
          "variants": Array [
            "Default",
          ],
        },
        "method": "post",
      },
      "url": "/api/scenario",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Object {
        "id": "1",
      },
      "type": "add scenario",
    },
    Object {
      "payload": Object {
        "args": Array [
          "/projects/1/scenarios/1",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > scenario createVariant should work 1`] = `
Object {
  "type": "create variant",
}
`;

exports[`actions > scenario deleteScenario should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "method": "delete",
    },
    "url": "/api/scenario/1",
  },
  "type": "fetch",
}
`;

exports[`actions > scenario deleteScenario should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/scenario/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > scenario deleteScenario should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/scenario/1",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": "1",
      "type": "delete scenario",
    },
    Object {
      "payload": Object {
        "args": Array [
          "/projects/1",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`actions > scenario load should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "url": "/api/scenario/1",
  },
  "type": "fetch",
}
`;

exports[`actions > scenario load should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/scenario/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > scenario load should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/scenario/1",
    },
    "type": "decrement outstanding fetches",
  },
  Array [
    Object {
      "payload": Object {
        "bundleId": "1",
        "id": "1",
      },
      "type": "set scenario",
    },
    Array [
      Object {
        "payload": Object {
          "options": Object {},
          "url": "/api/scenario/1/modifications",
        },
        "type": "increment outstanding fetches",
      },
      Promise {},
    ],
  ],
]
`;

exports[`actions > scenario saveToServer should work 1`] = `
Object {
  "payload": Object {
    "next": [Function],
    "options": Object {
      "body": Object {
        "id": "1",
      },
      "method": "put",
    },
    "url": "/api/scenario/1",
  },
  "type": "fetch",
}
`;

exports[`actions > scenario saveToServer should work 2`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "id": "1",
        },
        "method": "put",
      },
      "url": "/api/scenario/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > scenario saveToServer should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "id": "1",
        },
        "method": "put",
      },
      "url": "/api/scenario/1",
    },
    "type": "decrement outstanding fetches",
  },
  Object {
    "payload": Object {
      "id": "1",
    },
    "type": "set scenario",
  },
]
`;

exports[`actions > scenario set should work 1`] = `
Object {
  "type": "set scenario",
}
`;

exports[`actions > scenario setAll should work 1`] = `
Object {
  "type": "set scenarios",
}
`;

exports[`actions > scenario setAndLoadModifications should work 1`] = `
Array [
  Object {
    "payload": Object {
      "bundleId": "1",
      "id": "1",
    },
    "type": "set scenario",
  },
  Object {
    "payload": Object {
      "next": [Function],
      "url": "/api/scenario/1/modifications",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > scenario setAndLoadModifications should work 2`] = `
Array [
  Object {
    "payload": Object {
      "bundleId": "1",
      "id": "1",
    },
    "type": "set scenario",
  },
  Array [
    Object {
      "payload": Object {
        "options": Object {},
        "url": "/api/scenario/1/modifications",
      },
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
]
`;

exports[`actions > scenario setAndLoadModifications should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {},
      "url": "/api/scenario/1/modifications",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > scenario showVariant should work 1`] = `
Object {
  "type": "show variant",
}
`;

exports[`actions > scenario updateVariant should work 1`] = `
Object {
  "type": "update variant",
}
`;

exports[`actions > scenario updateVariants should work 1`] = `
Object {
  "type": "update variants",
}
`;
